fix overflow

--- a/style.less
+++ b/style.less
@@ -17,6 +17,8 @@
 	perspective: 500px;
 	transform-style: preserve-3d;
 	transition: calc(var(--transition) * 1ms);
+    overflow-x: visible;
+    overflow-y: clip;
 
 	> .stge--wrapper {
 		--order: 0;
